--- a/Thermory.Web/Views/Account/Manage.cshtml
+++ b/Thermory.Web/Views/Account/Manage.cshtml
@@ -1,10 +1,7 @@
 ﻿@model Thermory.Web.Models.LocalPasswordModel
-@{
-    ViewBag.Title = "Manage Account";
-}
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h1>Manage Account</h1>
 </hgroup>
 
 <p class="message-success">@ViewBag.StatusMessage</p>
