--- a/Thermory.Web/Views/Account/Register.cshtml
+++ b/Thermory.Web/Views/Account/Register.cshtml
@@ -1,11 +1,7 @@
 ﻿@model Thermory.Web.Models.RegisterModel
-@{
-    ViewBag.Title = "Register";
-}
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Create a new account.</h2>
+    <h1>Register</h1>
 </hgroup>
 
 <form id="registerForm" method="POST">
