--- a/Thermory.Web/Views/User/Index.cshtml
+++ b/Thermory.Web/Views/User/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = "Index";
-}
-
-<h3><strong>Users</strong></h3>
+﻿<h3><strong>Users</strong></h3>
 <div id="userGrid" style="height: 450px"></div>
 <div id="userDetails" style="display: none; padding-top: 10px;">
     <div class="row" style="margin-top: 5px">
