--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -103,13 +103,13 @@ h5, h6 {
 }
 
 .main-content {
-    background: url("./assets/accent.png") no-repeat;
+    background: url("./images/accent.png") no-repeat;
     padding-left: 10px;
     padding-top: 30px;
 }
 
 .featured + .main-content {
-    background: url("./assets/heroAccent.png") no-repeat;
+    background: url("./images/heroAccent.png") no-repeat;
 }
 
 header .content-wrapper {
@@ -265,43 +265,43 @@ ol.round {
     }
 
         ol.round li.zero {
-            background: url("./assets/orderedList0.png") no-repeat;
+            background: url("./images/orderedList0.png") no-repeat;
         }
 
         ol.round li.one {
-            background: url("./assets/orderedList1.png") no-repeat;
+            background: url("./images/orderedList1.png") no-repeat;
         }
 
         ol.round li.two {
-            background: url("./assets/orderedList2.png") no-repeat;
+            background: url("./images/orderedList2.png") no-repeat;
         }
 
         ol.round li.three {
-            background: url("./assets/orderedList3.png") no-repeat;
+            background: url("./images/orderedList3.png") no-repeat;
         }
 
         ol.round li.four {
-            background: url("./assets/orderedList4.png") no-repeat;
+            background: url("./images/orderedList4.png") no-repeat;
         }
 
         ol.round li.five {
-            background: url("./assets/orderedList5.png") no-repeat;
+            background: url("./images/orderedList5.png") no-repeat;
         }
 
         ol.round li.six {
-            background: url("./assets/orderedList6.png") no-repeat;
+            background: url("./images/orderedList6.png") no-repeat;
         }
 
         ol.round li.seven {
-            background: url("./assets/orderedList7.png") no-repeat;
+            background: url("./images/orderedList7.png") no-repeat;
         }
 
         ol.round li.eight {
-            background: url("./assets/orderedList8.png") no-repeat;
+            background: url("./images/orderedList8.png") no-repeat;
         }
 
         ol.round li.nine {
-            background: url("./assets/orderedList9.png") no-repeat;
+            background: url("./images/orderedList9.png") no-repeat;
         }
 
 /* content */
@@ -321,7 +321,7 @@ aside {
     }
 
         aside ul li {
-            background: url("./assets/bullet.png") no-repeat 0 50%;
+            background: url("./images/bullet.png") no-repeat 0 50%;
             padding: 2px 0 2px 20px;
         }
 
@@ -759,7 +759,7 @@ tr.pager td {
 }
 
 a.logo, a.logo:hover, a.logo:active {
-    background: url(./assets/logo.jpg) no-repeat top left;
+    background: url(./images/logo.jpg) no-repeat top left;
     background-size: 164px 80px;
     display: block;
     width: 164px;
